@@ -54,6 +54,7 @@ Bug fixes
  * Inform user when moving a page from one parent to another where there is an already existing page with the same slug (Casper Timmers)
  * User add/edit forms now support form widgets with JS/CSS media (Damian Grinwis)
  * Rich text processing now preserves non-breaking spaces instead of converting them to normal spaces (Wesley van Lee)
+ * Prevent autocomplete dropdowns from appearing over date choosers on Chrome (Kevin Howbrook)
 
 
 Upgrade considerations
